--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in Touch</h2>
-							<form method="post" action="mail.php">
+							<form method="post" action="https://formsubmit.co/jueyao.liu@gmail.com">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -184,5 +184,3 @@
 
 	</body>
 </html>
-
-STOP
