Remove naked email address

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in Touch</h2>
-							<form method="post" action="https://formsubmit.co/jueyao.liu@gmail.com">
+							<form method="post" action="32f2871acbadc03747e8c0b8ba9716e7">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
@@ -160,11 +160,6 @@
 								<li>
 									<a href="https://www.linkedin.com/in/jueyao-liu-34b179189/" class="icon brands style2 fa-linkedin-in">
 										<span class="label">LinkedIn</span>
-									</a>
-								</li>
-								<li>
-									<a href="mailto:jueyao.liu@gmail.com" class="icon style2 fa-envelope">
-										<span class="label">Email</span>
 									</a>
 								</li>
 							</ul>
