Fix formsubmit link

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in Touch</h2>
-							<form method="post" action="32f2871acbadc03747e8c0b8ba9716e7">
+							<form method="post" action="https://formsubmit.co/32f2871acbadc03747e8c0b8ba9716e7">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
