--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								Hi! My name is Jueyao Liu, and I'm a data scientist based in Seattle, 
 								Washington. I graduated from the University of Washington with a 
 								degree in Statistics and Data Science. I have 4 years of experience 
-								using R and 2 years of experience using Python for data anaylsis and 
+								using R and 2 years of experience using Python for data analysis and 
 								machine learning. 
           					</p>
           					<p class="major">
