--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 						</ul>
 					</div>
 					<div class="image">
-						<img src="images/spotlight01.jpg" alt="" />
+						<img src="images/soccer.jpg" alt="" />
 					</div>
 				</section>
 
